[package]
name = "ptbd-export"
version = "1.0.0"
authors = ["Juliana Gaibler <git@juliana.me>"]
edition = "2018"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.21"
colored = "1.7"
oxipng = "2.2"
raster = "0.2"
png = "0.14"
libc = "0.2.0"

[build-dependencies]
cc = "1.0"