[package]
name = "ptbd-export"
version = "1.0.0"
authors = ["Juliana Gaibler <git@juliana.me>"]
edition = "2021"
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
colored = "2.1"
oxipng = "9.1"
png = "0.17"
fast_image_resize = "4.2"
